name:                haskell-lsp
version:             0.1.0.0
synopsis:            Haskell library for the Microsoft Language Server Protocol

description:         An implementation of the types, and basic message server to
                     allow language implementors to support the Language Server
                     Protocol for their specific language.
                     .
                     An example of this is for Haskell via the Haskell IDE
                     Engine, at https://github.com/alanz/haskell-ide-engine/tree/lsp

homepage:            https://github.com/alanz/haskell-lsp
license:             MIT
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
copyright:           Alan Zimmerman, 2016
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10


library
  exposed-modules:     Language.Haskell.LSP.Core
                     , Language.Haskell.LSP.Constant
                     , Language.Haskell.LSP.Control
                     , Language.Haskell.LSP.TH.Constants
                     , Language.Haskell.LSP.TH.DataTypesJSON
                     , Language.Haskell.LSP.Utility
  -- other-modules:
 -- other-extensions:
  ghc-options:         -Wall
  -- ghc-options:         -Werror
  build-depends:       base >=4.9 && <4.10
                     , aeson >=1.0.0.0
                     , ansi-terminal
                     , bytestring
                     , cmdargs
                     , containers
                     , directory
                     , data-default
                     , filepath
                     , fsnotify
                     , hslogger
                     , MissingH
                     , mtl
                     , parsec
                     , safe
                     , split
                     , text
                     , time
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010


executable hie-vscode
  main-is:             HieVscode.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Language.Haskell.LSP.Constant
                     , Language.Haskell.LSP.Control
                     , Language.Haskell.LSP.Core
                     , Language.Haskell.LSP.Constant
                     , Language.Haskell.LSP.TH.DataTypesJSON
                     , Language.Haskell.LSP.Utility

  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , ansi-terminal
                     , bytestring
                     , cmdargs
                     , containers
                     , directory
                     , data-default
                     , filepath
                     , fsnotify
                     , hslogger
                     , MissingH
                     , mtl
                     , parsec
                     , safe
                     , split
                     , text
                     , time
                     , unordered-containers

source-repository head
  type:     git
  location: https://github.com/alanz/haskell-lsp
