name:                haskell-lsp
version:             0.7.0.0
synopsis:            Haskell library for the Microsoft Language Server Protocol

description:         An implementation of the types, and basic message server to
                     allow language implementors to support the Language Server
                     Protocol for their specific language.
                     .
                     An example of this is for Haskell via the Haskell IDE
                     Engine, at https://github.com//haskell-ide-engine

homepage:            https://github.com/alanz/haskell-lsp
license:             MIT
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
copyright:           Alan Zimmerman, 2016-2018
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.22

library
  reexported-modules:  Language.Haskell.LSP.Types
                     , Language.Haskell.LSP.Types.Capabilities
  exposed-modules:     Language.Haskell.LSP.Capture
                     , Language.Haskell.LSP.Constant
                     , Language.Haskell.LSP.Core
                     , Language.Haskell.LSP.Control
                     , Language.Haskell.LSP.Diagnostics
                     , Language.Haskell.LSP.Messages
                     , Language.Haskell.LSP.Utility
                     , Language.Haskell.LSP.VFS
  -- other-modules:
 -- other-extensions:
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.12
                     , aeson >=1.0.0.0
                     , bytestring
                     , containers
                     , directory
                     , data-default
                     , filepath
                     , hslogger
                     , hashable
                     , haskell-lsp-types >= 0.7
                     , lens >= 4.15.2
                     , mtl
                     , network-uri
                     , parsec
                     , sorted-list == 0.2.1.*
                     , stm
                     , text
                     , time
                     , unordered-containers
                     , yi-rope
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lsp-hello
  main-is:             Main.hs
  hs-source-dirs:      example
                       -- src
  default-language:    Haskell2010
  ghc-options:         -Wall

  build-depends:       base >=4.9 && <4.12
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , data-default
                     , filepath
                     , hslogger
                     , lens >= 4.15.2
                     , mtl
                     , network-uri
                     , parsec
                     , stm
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
                     , yi-rope
                     -- the package library. Comment this out if you want repl changes to propagate
                     , haskell-lsp

test-suite haskell-lsp-test
  type:                exitcode-stdio-1.0
  -- hs-source-dirs:      test src
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Spec
                       CapabilitiesSpec
                       DiagnosticsSpec
                       MethodSpec
                       ServerCapabilitiesSpec
                       URIFilePathSpec
                       VspSpec
                       WorkspaceFoldersSpec
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , hspec
                     , hashable
                     -- , hspec-jenkins
                     , lens >= 4.15.2
                     , network-uri
                     , sorted-list == 0.2.1.*
                     , yi-rope
                     , haskell-lsp
                     , text
                     , stm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alanz/haskell-lsp
