cabal-version:       >=1.10
name:                simple-bench
version:             0.1.0.0
build-type:          Simple

benchmark simple-bench
  main-is:             SimpleBench.hs
  type:                exitcode-stdio-1.0
  build-depends:       base <4.15
                     , lsp-test
                     , lsp
                     , process
                     , extra
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -eventlog -rtsopts
