cabal-version:       >=1.10
name:                func-test
version:             0.1.0.0
build-type:          Simple

executable func-test
  main-is:             FuncTest.hs
  build-depends:       base >=4.14 && <4.15
                     , lsp-test
                     , haskell-lsp
                     , data-default
                     , process
                     , lens
                     , monad-control
  default-language:    Haskell2010
