cabal-version:       >=1.10
name:                func-test
version:             0.1.0.0
build-type:          Simple

test-suite func-test
  main-is:             FuncTest.hs
  type:                exitcode-stdio-1.0
  build-depends:       base <4.15
                     , lsp-test
                     , haskell-lsp
                     , data-default
                     , process
                     , lens
                     , monad-control
                     , hspec
                     , async
  default-language:    Haskell2010
