name:                haskell-lsp-types
version:             0.4.0.0
synopsis:            Haskell library for the Microsoft Language Server Protocol, data types

description:         An implementation of the types to allow language implementors to
                     support the Language Server Protocol for their specific language.

homepage:            https://github.com/alanz/haskell-lsp
license:             MIT
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
copyright:           Alan Zimmerman, 2016-2018
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.LSP.TH.ClientCapabilities
                     , Language.Haskell.LSP.TH.Constants
                     , Language.Haskell.LSP.TH.DataTypesJSON
                     , Language.Haskell.LSP.TH.MessageFuncs
                     , Language.Haskell.LSP.TH.Utils
  other-modules:       Language.Haskell.LSP.TH.Command
                     , Language.Haskell.LSP.TH.CodeAction
                     , Language.Haskell.LSP.TH.Diagnostic
                     , Language.Haskell.LSP.TH.List
                     , Language.Haskell.LSP.TH.Location
                     , Language.Haskell.LSP.TH.Message
                     , Language.Haskell.LSP.TH.Symbol
                     , Language.Haskell.LSP.TH.TextDocumentIdentifier
                     , Language.Haskell.LSP.TH.Uri
                     , Language.Haskell.LSP.TH.WorkspaceEdit
 -- other-extensions:
  ghc-options:         -Wall
  -- ghc-options:         -Werror
  build-depends:       base >=4.9 && <4.12
                     , aeson >=1.0.0.0
                     , bytestring
                     , data-default
                     , filepath
                     , hashable
                     , lens >= 4.15.2
                     , network-uri
                     , text
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alanz/haskell-lsp
