name:                haskell-lsp-types
version:             0.17.0.0
synopsis:            Haskell library for the Microsoft Language Server Protocol, data types

description:         An implementation of the types to allow language implementors to
                     support the Language Server Protocol for their specific language.

homepage:            https://github.com/alanz/haskell-lsp
license:             MIT
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
copyright:           Alan Zimmerman, 2016-2018
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.LSP.Types
                     , Language.Haskell.LSP.Types.Capabilities
                     , Language.Haskell.LSP.Types.Constants
                     , Language.Haskell.LSP.Types.Lens
                     , Language.Haskell.LSP.Types.MessageFuncs
                     , Language.Haskell.LSP.Types.Utils
  other-modules:       Language.Haskell.LSP.Types.ClientCapabilities
                     , Language.Haskell.LSP.Types.CodeAction
                     , Language.Haskell.LSP.Types.Color
                     , Language.Haskell.LSP.Types.Command
                     , Language.Haskell.LSP.Types.Completion
                     , Language.Haskell.LSP.Types.DataTypesJSON
                     , Language.Haskell.LSP.Types.Diagnostic
                     , Language.Haskell.LSP.Types.DocumentFilter
                     , Language.Haskell.LSP.Types.FoldingRange
                     , Language.Haskell.LSP.Types.List
                     , Language.Haskell.LSP.Types.Location
                     , Language.Haskell.LSP.Types.MarkupContent
                     , Language.Haskell.LSP.Types.Message
                     , Language.Haskell.LSP.Types.Progress
                     , Language.Haskell.LSP.Types.Symbol
                     , Language.Haskell.LSP.Types.TextDocument
                     , Language.Haskell.LSP.Types.Uri
                     , Language.Haskell.LSP.Types.Window
                     , Language.Haskell.LSP.Types.WorkspaceEdit
                     , Language.Haskell.LSP.Types.WorkspaceFolders
 -- other-extensions:
  ghc-options:         -Wall
  -- ghc-options:         -Werror
  build-depends:       base >= 4.9 && < 4.14
                     , aeson >=1.2.2.0
                     , bytestring
                     , data-default
                     , deepseq
                     , filepath
                     , hashable
                     , lens >= 4.15.2
                     , network-uri
                     , scientific
                     , text
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alanz/haskell-lsp
