name:                haskell-lsp-types
version:             0.22.0.0
synopsis:            Haskell library for the Microsoft Language Server Protocol, data types

description:         An implementation of the types to allow language implementors to
                     support the Language Server Protocol for their specific language.

homepage:            https://github.com/alanz/haskell-lsp
license:             MIT
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
copyright:           Alan Zimmerman, 2016-2020
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.LSP.Types
                     , Language.Haskell.LSP.Types.Capabilities
                     , Language.Haskell.LSP.Types.Lens
                     , Data.IxMap
  other-modules:       Language.Haskell.LSP.Types.ClientCapabilities
                     , Language.Haskell.LSP.Types.CodeAction
                     , Language.Haskell.LSP.Types.CodeLens
                     , Language.Haskell.LSP.Types.Color
                     , Language.Haskell.LSP.Types.Command
                     , Language.Haskell.LSP.Types.Common
                     , Language.Haskell.LSP.Types.Completion
                     , Language.Haskell.LSP.Types.DataTypesJSON
                     , Language.Haskell.LSP.Types.Declaration
                     , Language.Haskell.LSP.Types.Definition
                     , Language.Haskell.LSP.Types.Diagnostic
                     , Language.Haskell.LSP.Types.DocumentFilter
                     , Language.Haskell.LSP.Types.DocumentHighlight
                     , Language.Haskell.LSP.Types.DocumentLink
                     , Language.Haskell.LSP.Types.FoldingRange
                     , Language.Haskell.LSP.Types.Formatting
                     , Language.Haskell.LSP.Types.Hover
                     , Language.Haskell.LSP.Types.Implementation
                     , Language.Haskell.LSP.Types.Location
                     , Language.Haskell.LSP.Types.LspId
                     , Language.Haskell.LSP.Types.MarkupContent
                     , Language.Haskell.LSP.Types.Method
                     , Language.Haskell.LSP.Types.Message
                     , Language.Haskell.LSP.Types.Progress
                     , Language.Haskell.LSP.Types.Registration
                     , Language.Haskell.LSP.Types.References
                     , Language.Haskell.LSP.Types.Rename
                     , Language.Haskell.LSP.Types.ServerCapabilities
                     , Language.Haskell.LSP.Types.SignatureHelp
                     , Language.Haskell.LSP.Types.StaticRegistrationOptions
                     , Language.Haskell.LSP.Types.DocumentSymbol
                     , Language.Haskell.LSP.Types.Synonyms
                     , Language.Haskell.LSP.Types.TextDocument
                     , Language.Haskell.LSP.Types.TypeDefinition
                     , Language.Haskell.LSP.Types.Uri
                     , Language.Haskell.LSP.Types.Utils
                     , Language.Haskell.LSP.Types.Window
                     , Language.Haskell.LSP.Types.WorkspaceEdit
                     , Language.Haskell.LSP.Types.WorkspaceFolders
 -- other-extensions:
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 4.15
                     , aeson >=1.2.2.0
                     , binary
                     , bytestring
                     , containers
                     , data-default
                     , deepseq
                     , filepath
                     , hashable
                     , lens >= 4.15.2
                     , network-uri
                     , scientific
                     , some
                     , text
                     , template-haskell
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alanz/haskell-lsp
