name:                haskell-lsp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Bubba/haskell-lsp-test#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Lau
maintainer:          luke_lau@icloud.com
copyright:           2018 Luke Lau
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.LSP.Test
                     , Language.Haskell.LSP.Test.Recorded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp-client
                     , haskell-lsp-types
                     , haskell-lsp
                     , data-default
                     , bytestring
                     , aeson
                     , lens
                     , filepath
                     , text
                     , transformers
                     , process
                     , directory
                     , containers
                     , unordered-containers
  if os(windows)
    build-depends:     win32
  else
    build-depends:     unix
  other-modules:       Compat
                       Capabilities
                       Language.Haskell.LSP.Test.Files
                       Language.Haskell.LSP.Test.Parsing
  ghc-options:         -W

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  ghc-options:         -W
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , lens
                     , directory
                     , haskell-lsp-test
                     , haskell-lsp-types
  default-language:    Haskell2010

executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp-test
                     , haskell-lsp-types
                     , lens
                     , text
                     , directory

executable recorded-example
  hs-source-dirs:      example
  main-is:             Recorded.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp-test
                     , directory
