name:                haskell-lsp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Bubba/haskell-lsp-test#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Lau
maintainer:          luke_lau@icloud.com
copyright:           2018 Luke Lau
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.LSP.Test
                     , Language.Haskell.LSP.Test.Replay
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp-types
                     , haskell-lsp >= 0.3
                     , aeson
                     , ansi-terminal
                     , async
                     , bytestring
                     , conduit
                     , conduit-parse
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , lens
                     , mtl
                     , parser-combinators
                     , process
                     , text
                     , transformers
                     , unordered-containers
                     , yi-rope
  if os(windows)
    build-depends:     Win32
  else
    build-depends:     unix
  other-modules:       Language.Haskell.LSP.Test.Compat
                       Language.Haskell.LSP.Test.Decoding
                       Language.Haskell.LSP.Test.Exceptions
                       Language.Haskell.LSP.Test.Files
                       Language.Haskell.LSP.Test.Messages
                       Language.Haskell.LSP.Test.Parsing
                       Language.Haskell.LSP.Test.Server
                       Language.Haskell.LSP.Test.Session
  ghc-options:         -W

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  ghc-options:         -W
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , lens
                     , data-default
                     , directory
                     , haskell-lsp-test
                     , haskell-lsp
                     , haskell-lsp-types
                     , conduit
                     , conduit-parse
                     , aeson
                     , unordered-containers
                     , text
  default-language:    Haskell2010

executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp-test
                     , haskell-lsp-types
                     , lens
                     , text
                     , directory
